--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,15 @@
     <string name="status_connection_wifi">"You connected to wifi. Have fun using the application. "</string>
     <string name="status_connection_mobile_data">"Mobile data enabled. Have fun using the application. "</string>
     <string name="app_name">Your weather</string>
-    <string name="waiting_for_data">Oczekiwanie na sieć.</string>
-    <string name="temperature">Temperatura [°C]:</string>
-    <string name="humidity">Wilgotność [%]:</string>
-    <string name="windSpeed">Prędkość wiatru [m/s]:</string>
-    <string name="today">dzisiaj</string>
-    <string name="tomorrow">jutro</string>
-    <string name="error_connect">Problem z połączęniem. Sprawdź nazwę miejscowości.</string>
-    <string name="error_processing">Problem z przetwarzaniem.</string>
-    <string name="error_url">Problem z api. </string>
+    <string name="waiting_for_data">Waiting for the network.</string>
+    <string name="temperature">Temperature [°C]:</string>
+    <string name="humidity">Humidity [%]:</string>
+    <string name="windSpeed">Wind speed [m/s]:</string>
+    <string name="today">today</string>
+    <string name="tomorrow">tomorrow</string>
+    <string name="error_connect">Connection problem. Check the city name.</string>
+    <string name="error_processing">Processing problem.</string>
+    <string name="error_url">Api problem.</string>
+    <string name="select_city">Select city</string>
+    <string name="serach_city">Select or type city :)</string>
 </resources>
