Add values/string for value + replace dp by sp

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -18,4 +18,5 @@
     <string name="error_url">Problem z api.</string>
     <string name="select_city">Wybierz miasto</string>
     <string name="serach_city">Wybierz miasto lub wpisz nazwe :)</string>
+    <string name="waiting_text">Oczekiwanie…</string>
 </resources>
