--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="error_url">Api problem.</string>
     <string name="select_city">Select city</string>
     <string name="serach_city">Select or type city :)</string>
+    <string name="waiting_text">Waiting…</string>
 </resources>
