Added previously chosen cities stored in SQLite db. Reworked refresh button layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="select_city">Select city</string>
     <string name="serach_city">Select or type city :)</string>
     <string name="waiting_text">Waiting…</string>
+    <string name="refresh">Refresh</string>
 </resources>
