--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -19,4 +19,5 @@
     <string name="select_city">Wybierz miasto</string>
     <string name="serach_city">Wybierz miasto lub wpisz nazwe :)</string>
     <string name="waiting_text">Oczekiwanie…</string>
+    <string name="refresh">Odśwież</string>
 </resources>
